--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "http-status": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
+    "nodemailer": "^7.0.3",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/nodemailer": "^6.4.17",
     "typescript": "^5.8.3"
   }
 }
